# TriskcraftAddon

./: .gitignore  README.md  __init__.py  pyproject.toml
Banners/DiscordInfo/: Creator.py  Embeds.py  Modules.py
Banners/DiscordInfo/Form/: FormBanner.py  FormViews.py  FormsLog.csv
Banners/DiscordInfo/TicketSystem/: TicketsLog.csv
Banners/MembersInfo/: Creator.py  Modules.py  TaskCommand.py  TasksLog.csv
Behaviours/: FirstJoin.py  activity.py  online.py  twitch_live_notify.py
Classes/: AeServer.py  TkServer.py
Commands/: MemberTrial.py  bot_banner.py  digs.py  whitelister.py
Config/: activity.yml  evaluaciones.yml
ContextMenus/: spanish.py
mdplugins/: build-event.py  chatbridge.py  dis-session.py  join_motd.py  manager.py  ow.py  reg-bkps.py  scoreboard.py  scoreboards.py  terminal.py  tts_addon.py
