[project]
name = "triskcraftaddon"
version = "0.1.0"
description = "Addon usado en triskcraft para mcdis"
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["discord-py>=2.7.1", "mcdis-rcon>=0.4.33a0"]

[dependency-groups]
dev = ["mypy>=1.20.0", "ruff>=0.15.8"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
